--- a/administer/collections.mdx
+++ b/administer/collections.mdx
@@ -101,7 +101,7 @@ spec:
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`ListCollections`](/tooling/api-info/definition/operations/ListCollections) endpoint.
+[`ListCollections`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListCollections) endpoint.
 
 <ApiAuthReq />
 
@@ -210,7 +210,7 @@ resource "chronosphere_collection" "infra" {
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`CreateCollection`](/tooling/api-info/definition/operations/CreateCollection) endpoint.
+[`CreateCollection`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateCollection) endpoint.
 
 <ApiAuthReq />
 
@@ -275,7 +275,7 @@ its resource and apply it using Terraform.
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateCollection`](/tooling/api-info/definition/operations/UpdateCollection) endpoint.
+[`UpdateCollection`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateCollection) endpoint.
 
 <ApiAuthReq />
 
@@ -333,7 +333,7 @@ chronoctl collections delete dbas-collection
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteCollection`](/tooling/api-info/definition/operations/DeleteCollection) endpoint.
+[`DeleteCollection`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteCollection) endpoint.
 
 <ApiAuthReq />
 
