--- a/administer/service-accounts.mdx
+++ b/administer/service-accounts.mdx
@@ -63,7 +63,7 @@ chronoctl service-accounts list --output=json
 <Tab title="API" id="view-service-accounts-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListServiceAccounts`](/tooling/api-info/definition/operations/ListServiceAccounts) endpoint.
+[`ListServiceAccounts`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListServiceAccounts) endpoint.
 
 <ApiAuthReq />
 
@@ -242,7 +242,7 @@ jq '.resources[] | select(.type=="chronosphere_service_account")' terraform.tfst
 <Tab title="API" id="create-an-unrestricted-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateServiceAccount`](/tooling/api-info/definition/operations/CreateServiceAccount) endpoint
+[`CreateServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateServiceAccount) endpoint
 and update the `service_account.unrestricted` key.
 
 <ApiAuthReq />
@@ -449,7 +449,7 @@ jq '.resources[] | select(.type=="chronosphere_service_account")' terraform.tfst
 <Tab title="API" id="create-a-restricted-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateServiceAccount`](/tooling/api-info/definition/operations/CreateServiceAccount) endpoint.
+[`CreateServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateServiceAccount) endpoint.
 
 <ApiAuthReq />
 
@@ -518,7 +518,7 @@ chronoctl service-accounts delete tenant-name
 <Tab title="API" id="delete-a-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteServiceAccount`](/tooling/api-info/definition/operations/DeleteServiceAccount) endpoint.
+[`DeleteServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteServiceAccount) endpoint.
 
 <ApiAuthReq />
 
