--- a/control/sampling/behaviors.mdx
+++ b/control/sampling/behaviors.mdx
@@ -140,7 +140,7 @@ for a completed behavior definition.
 <Tab title="API" id="view-behaviors-api">
 
 To complete this action with the Chronosphere API, use the
-[`ReadTraceBehaviorConfig`](/tooling/api-info/definition/operations/ReadTraceBehaviorConfig)
+[`ReadTraceBehaviorConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadTraceBehaviorConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -236,7 +236,7 @@ for a completed behavior definition.
 <Tab title="API" id="assign-a-behavior-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTraceBehaviorConfig`](/tooling/api-info/definition/operations/UpdateTraceBehaviorConfig)
+[`UpdateTraceBehaviorConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTraceBehaviorConfig)
 endpoint.
 
 <ApiAuthReq />
