--- a/control/sampling/head-sampling.mdx
+++ b/control/sampling/head-sampling.mdx
@@ -79,7 +79,7 @@ chronoctl trace-jaeger-remote-sampling-strategies list
 <Tab title="API" id="view-head-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListTraceJaegerRemoteSamplingStrategies`](/tooling/api-info/definition/operations/ListTraceJaegerRemoteSamplingStrategies)
+[`ListTraceJaegerRemoteSamplingStrategies`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListTraceJaegerRemoteSamplingStrategies)
 endpoint.
 
 <ApiAuthReq />
@@ -333,7 +333,7 @@ To define your head sampling strategy:
 <Tab title="API" id="create-head-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateTraceJaegerRemoteSamplingStrategy`](/tooling/api-info/definition/operations/CreateTraceJaegerRemoteSamplingStrategy)
+[`CreateTraceJaegerRemoteSamplingStrategy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTraceJaegerRemoteSamplingStrategy)
 endpoint.
 
 <ApiAuthReq />
@@ -452,7 +452,7 @@ To edit head sampling rules using [Terraform](/tooling/infrastructure/terraform)
 <Tab title="API" id="edit-head-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTraceJaegerRemoteSamplingStrategy`](/tooling/api-info/definition/operations/UpdateTraceJaegerRemoteSamplingStrategy)
+[`UpdateTraceJaegerRemoteSamplingStrategy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTraceJaegerRemoteSamplingStrategy)
 endpoint.
 
 <ApiAuthReq />
@@ -491,7 +491,7 @@ chronoctl trace-jaeger-remote-sampling-strategies delete head-sampling-prod
 <Tab title="API" id="delete-head-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteTraceJaegerRemoteSamplingStrategy`](/tooling/api-info/definition/operations/DeleteTraceJaegerRemoteSamplingStrategy)
+[`DeleteTraceJaegerRemoteSamplingStrategy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteTraceJaegerRemoteSamplingStrategy)
 endpoint.
 
 <ApiAuthReq />
