--- a/control/sampling/trace-metrics.mdx
+++ b/control/sampling/trace-metrics.mdx
@@ -106,11 +106,11 @@ chronoctl trace-metrics-rules read telemetry-sdk
 <Tab title="API" id="view-trace-metrics-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListTraceMetricsRules`](/tooling/api-info/definition/operations/ListTraceMetricsRules)
+[`ListTraceMetricsRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListTraceMetricsRules)
 endpoint.
 
 To view a single trace metrics rule instead of a complete list of rules, use the
-[`ReadTraceMetricsRule`](/tooling/api-info/definition/operations/ReadTraceMetricsRule)
+[`ReadTraceMetricsRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadTraceMetricsRule)
 endpoint.
 
 <ApiAuthReq />
@@ -276,7 +276,7 @@ metric resource.
 <Tab title="API" id="create-a-trace-metric-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateTraceMetricsRule`](/tooling/api-info/definition/operations/CreateTraceMetricsRule)
+[`CreateTraceMetricsRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTraceMetricsRule)
 endpoint.
 
 <ApiAuthReq />
@@ -406,7 +406,7 @@ To edit a trace metric using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="update-a-trace-metric-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTraceMetricsRule`](/tooling/api-info/definition/operations/UpdateTraceMetricsRule)
+[`UpdateTraceMetricsRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTraceMetricsRule)
 endpoint.
 
 <ApiAuthReq />
@@ -461,7 +461,7 @@ Chronoctl deletes the trace metric with the specified slug.
 <Tab title="API" id="delete-a-trace-metric-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteTraceMetricsRule`](/tooling/api-info/definition/operations/DeleteTraceMetricsRule)
+[`DeleteTraceMetricsRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteTraceMetricsRule)
 endpoint.
 
 <ApiAuthReq />
@@ -476,7 +476,7 @@ trace metric also removes access to the metric in the Trace Metrics dashboard.
 
 A trace metric rule consists of the following fields, which are properties of the
 `trace_metrics_rule` object. Each field is required unless otherwise noted. See
-the [CreateTraceMetricsRule](/tooling/api-info/definition/operations/CreateTraceMetricsRule)
+the [CreateTraceMetricsRule](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTraceMetricsRule)
 API for a complete list of supported fields.
 
 - `group_by`: Labels for grouping and narrowing search results to specific
