--- a/control/shaping/rules/mapping.mdx
+++ b/control/shaping/rules/mapping.mdx
@@ -64,7 +64,7 @@ chronoctl mapping-rules list
 <Tab title="API" id="view-mapping-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListMappingRules`](/tooling/api-info/definition/operations/ListMappingRules) endpoint.
+[`ListMappingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListMappingRules) endpoint.
 
 <ApiAuthReq />
 
@@ -139,7 +139,7 @@ resource "chronosphere_mapping_rule" "http_request_duration" {
 <Tab title="API" id="create-mapping-rule-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateMappingRule`](/tooling/api-info/definition/operations/CreateMappingRule) endpoint.
+[`CreateMappingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateMappingRule) endpoint.
 
 <ApiAuthReq />
 
@@ -302,7 +302,7 @@ delete.
 <Tab title="API" id="delete-mapping-rule-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteMappingRule`](/tooling/api-info/definition/operations/DeleteMappingRule) endpoint.
+[`DeleteMappingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteMappingRule) endpoint.
 
 <ApiAuthReq />
 
