--- a/ingest/metrics-traces/azure.mdx
+++ b/ingest/metrics-traces/azure.mdx
@@ -277,7 +277,7 @@ After configuring Azure to enable access to metrics, you must configure
 Observability Platform to receive and process those metrics.
 
 To access the API directly, see the
-[Chronosphere API for Azure metrics](/tooling/api-info/definition/operations/ListAzureMetricsIntegrations).
+[Chronosphere API for Azure metrics](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListAzureMetricsIntegrations).
 
 ### View Azure metrics integrations
 
@@ -304,11 +304,11 @@ Replace _`SLUG`_ with the unique identifier of the Azure metrics integration.
 <Tab title="API" id="list-azure-API">
 
 To list Azure metrics integrations with the Chronosphere API, use the
-[`ListAzureMetricsIntegrations`](/tooling/api-info/definition/operations/ListAzureMetricsIntegrations)
+[`ListAzureMetricsIntegrations`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListAzureMetricsIntegrations)
 endpoint.
 
 To view a single Azure metrics integration with the Chronosphere API, use
-the [`ReadAzureMetricsIntegration`](/tooling/api-info/definition/operations/ReadAzureMetricsIntegration)
+the [`ReadAzureMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadAzureMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
@@ -401,11 +401,11 @@ resource "chronosphere_azure_metrics_integration" "chronosphere_azure_metrics" {
 <Tab title="API" id="list-azure-API">
 
 To create Azure integrations with the Observability Platform API, use the
-[`CreateAzureMetricsIntegration`](/tooling/api-info/definition/operations/CreateAzureMetricsIntegration)
+[`CreateAzureMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateAzureMetricsIntegration)
 endpoint.
 
 To update a single Azure integration with the Observability Platform API, use
-the [`UpdateAzureMetricsIntegration`](/tooling/api-info/definition/operations/UpdateAzureMetricsIntegration)
+the [`UpdateAzureMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateAzureMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
@@ -457,7 +457,7 @@ Replace _`SLUG`_ with the unique identifier of the Azure metrics integration.
 <Tab title="API" id="list-azure-API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteAzureMetricsIntegration`](/tooling/api-info/definition/operations/DeleteAzureMetricsIntegration)
+[`DeleteAzureMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteAzureMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
