--- a/ingest/metrics-traces/gcp.mdx
+++ b/ingest/metrics-traces/gcp.mdx
@@ -86,7 +86,7 @@ to review the status of your integration.
 1. Configure the integration in Observability Platform.
 
    Initialize the integration using the
-   [Google Cloud integration API](/tooling/api-info/definition/operations/ListGcpMetricsIntegrations)
+   [Google Cloud integration API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListGcpMetricsIntegrations)
    by applying the configuration with [Chronoctl](/tooling/chronoctl) or
    [Terraform](/tooling/infrastructure/terraform).
 
@@ -217,10 +217,10 @@ Replace _`SLUG`_ with the unique identifier of the Google Cloud integration.
 <Tab title="API" id="list-gcp-API">
 
 To list Google Cloud integrations with the Chronosphere API, use the
-[`ListGcpMetricsIntegrations`](/tooling/api-info/definition/operations/ListGcpMetricsIntegrations) endpoint.
+[`ListGcpMetricsIntegrations`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListGcpMetricsIntegrations) endpoint.
 
 To view a single Google Cloud integration with the Chronosphere API, use
-the [`ReadGcpMetricsIntegration`](/tooling/api-info/definition/operations/ReadGcpMetricsIntegration)
+the [`ReadGcpMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadGcpMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
@@ -295,11 +295,11 @@ resource "chronosphere_gcp_metrics_integration" "chronosphere_gcp_metrics" {
 <Tab title="API" id="list-gcp-API">
 
 To create Google Cloud integrations with the Observability Platform API, use the
-[`CreateGcpMetricsIntegration`](/tooling/api-info/definition/operations/CreateGcpMetricsIntegration)
+[`CreateGcpMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateGcpMetricsIntegration)
 endpoint.
 
 To update a single Google Cloud integration with the Observability Platform API, use
-the [`UpdateGcpMetricsIntegration`](/tooling/api-info/definition/operations/UpdateGcpMetricsIntegration)
+the [`UpdateGcpMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateGcpMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
@@ -338,7 +338,7 @@ chronoctl gcp-metrics-integrations delete SLUG
 <Tab title="API" id="list-gcp-API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteGcpMetricsIntegration`](/tooling/api-info/definition/operations/DeleteGcpMetricsIntegration)
+[`DeleteGcpMetricsIntegration`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteGcpMetricsIntegration)
 endpoint.
 
 <ApiAuthReq />
