--- a/ingest/metrics-traces/otel/otel-ingest-config.mdx
+++ b/ingest/metrics-traces/otel/otel-ingest-config.mdx
@@ -153,7 +153,7 @@ the command returns an HTTP `404 Not Found` status code, your tenant uses the de
 <Tab title="API" id="API-view-otel-ingest">
 
 To complete this action with the Chronosphere API, use the
-[`ReadOtelMetricsIngestion`](/tooling/api-info/definition/operations/ReadOtelMetricsIngestion)
+[`ReadOtelMetricsIngestion`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadOtelMetricsIngestion)
 endpoint.
 
 <ApiAuthReq />
@@ -234,11 +234,11 @@ resource "chronosphere_otel_metrics_ingestion" "my-otel-metrics-ingestion" {
 <Tab title="API" id="API-create-otel-ingest">
 
 To create an OpenTelemetry ingestion configuration with the Chronosphere API, use the
-[`CreateOtelMetricsIngestion`](/tooling/api-info/definition/operations/CreateOtelMetricsIngestion)
+[`CreateOtelMetricsIngestion`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateOtelMetricsIngestion)
 endpoint.
 
 To update an OpenTelemetry ingestion configuration with the Chronosphere API, use the
-[`UpdateOtelMetricsIngestion`](/tooling/api-info/definition/operations/UpdateOtelMetricsIngestion)
+[`UpdateOtelMetricsIngestion`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateOtelMetricsIngestion)
 endpoint.
 
 <ApiAuthReq />
@@ -273,7 +273,7 @@ chronoctl otel-metrics-ingestion read
 <Tab title="API" id="API-delete-otel-ingest">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteOtelMetricsIngestion`](/tooling/api-info/definition/operations/DeletedOtelMetricsIngestion)
+[`DeleteOtelMetricsIngestion`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeletedOtelMetricsIngestion)
 endpoint.
 
 <ApiAuthReq />
