--- a/investigate/alerts/notifications/notifiers/slack.mdx
+++ b/investigate/alerts/notifications/notifiers/slack.mdx
@@ -183,7 +183,7 @@ To create a Slack notifier:
 <Tab title="API" id="slack-API">
 
 To complete this action with the Chronosphere API, use the `slack` object in the
-[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
