--- a/investigate/alerts/notifications/notifiers/victorops.mdx
+++ b/investigate/alerts/notifications/notifiers/victorops.mdx
@@ -154,7 +154,7 @@ To create a VictorOps notifier:
 <Tab title="API" id="victorops-API">
 
 To complete this action with the Chronosphere API, use the `victor_ops` object in the
-[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
