--- a/investigate/alerts/notifications/policies.mdx
+++ b/investigate/alerts/notifications/policies.mdx
@@ -106,7 +106,7 @@ spec:
 <Tab title="API" id="view-a-notification-policy-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListNotificationPolicies`](/tooling/api-info/definition/operations/ListNotificationPolicies)
+[`ListNotificationPolicies`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListNotificationPolicies)
 endpoint.
 
 <ApiAuthReq />
@@ -320,7 +320,7 @@ resource "chronosphere_monitor" "infra_with_policy_override" {
 <Tab title="API" id="create-a-notification-policy-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateNotificationPolicy`](/tooling/api-info/definition/operations/CreateNotificationPolicy)
+[`CreateNotificationPolicy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotificationPolicy)
 endpoint.
 
 <ApiAuthReq />
@@ -387,7 +387,7 @@ To edit a notification policy using [Terraform](/tooling/infrastructure/terrafor
 <Tab title="API" id="edit-a-notification-policy-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateNotificationPolicy`](/tooling/api-info/definition/operations/UpdateNotificationPolicy)
+[`UpdateNotificationPolicy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateNotificationPolicy)
 endpoint.
 
 <ApiAuthReq />
@@ -447,7 +447,7 @@ Chronoctl deletes the notification policy with the specified slug.
 <Tab title="API" id="delete-a-notification-policy-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteNotificationPolicy`](/tooling/api-info/definition/operations/DeleteNotificationPolicy)
+[`DeleteNotificationPolicy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteNotificationPolicy)
 endpoint.
 
 <ApiAuthReq />
@@ -593,7 +593,7 @@ resource "chronosphere_notification_policy" "infra" {
 <Tab title="API" id="override-notification-policy-defaults-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateNotificationPolicy`](/tooling/api-info/definition/operations/UpdateNotificationPolicy)
+[`UpdateNotificationPolicy`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateNotificationPolicy)
 endpoint and update the `overrides` key.
 
 <ApiAuthReq />
