--- a/investigate/querying/traces/features.mdx
+++ b/investigate/querying/traces/features.mdx
@@ -182,7 +182,7 @@ traces for the search along with the duration, spans, and error states of spans.
 To download an individual trace in OpenTelemetry Protocol (OTLP) JSON format, click
 the <Icon icon="ellipsis-vertical" /> three vertical dots icon and select
 **Download JSON**. Alternatively, use the
-[ListTraces](/tooling/api-info/data_definition/operations/ListTraces) endpoint
+[ListTraces](https://docs.chronosphere.io/tooling/api-info/data_definition/operations/ListTraces) endpoint
 to return a list of traces in OTLP JSON format.
 
 Select an individual trace to open the trace details page. The header displays
