--- a/observe/dashboards.mdx
+++ b/observe/dashboards.mdx
@@ -143,7 +143,7 @@ Replace _`SLUG`_ with the dashboard's slug.
 <Tab title="API" id="view-dashboards-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListDashboards`](/tooling/api-info/definition/operations/ListDashboards) endpoint.
+[`ListDashboards`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDashboards) endpoint.
 
 <ApiAuthReq />
 
@@ -286,7 +286,7 @@ To create a dashboard with [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="create-a-dashboard-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateDashboard`](/tooling/api-info/definition/operations/CreateDashboard) endpoint.
+[`CreateDashboard`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateDashboard) endpoint.
 
 <ApiAuthReq />
 
@@ -380,7 +380,7 @@ To rename a dashboard:
 <Tab title="API" id="rename-a-dashboard-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateDashboard`](/tooling/api-info/definition/operations/UpdateDashboard) endpoint and
+[`UpdateDashboard`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateDashboard) endpoint and
 update the `name` key of the `dashboard` object.
 
 <ApiAuthReq />
@@ -412,7 +412,7 @@ To reassign a dashboard:
 <Tab title="API" id="reassign-a-dashboard-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateDashboard`](/tooling/api-info/definition/operations/UpdateDashboard) endpoint and
+[`UpdateDashboard`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateDashboard) endpoint and
 update the `collection` key of the `dashboard` object.
 
 <ApiAuthReq />
@@ -567,7 +567,7 @@ To delete a dashboard using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="delete-a-dashboard-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteDashboard`](/tooling/api-info/definition/operations/DeleteDashboard) endpoint.
+[`DeleteDashboard`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteDashboard) endpoint.
 
 <ApiAuthReq />
 
