--- a/observe/enable-events/dashboards.mdx
+++ b/observe/enable-events/dashboards.mdx
@@ -83,7 +83,7 @@ you can display relevant change events for that environment only.
 The following limitations apply to change events for classic dashboards:
 
 - Change events created using the
-  [CreateEvent API](/tooling/api-info/data_definition/operations/CreateEvent)
+  [CreateEvent API](https://docs.chronosphere.io/tooling/api-info/data_definition/operations/CreateEvent)
   don't display as ranged annotations on Grafana charts. Only built-in change events,
   such as alerting monitors, and change events created through
   [webhook integrations](/ingest/third-party)
