--- a/observe/enable-events/use-events.mdx
+++ b/observe/enable-events/use-events.mdx
@@ -49,7 +49,7 @@ To view change events:
 <Tab title="API" id="view-change-events-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListEvents`](/tooling/api-info/data_definition/operations/ListEvents) endpoint.
+[`ListEvents`](https://docs.chronosphere.io/tooling/api-info/data_definition/operations/ListEvents) endpoint.
 
 <ApiAuthReq />
 
@@ -143,7 +143,7 @@ Your event is viewable and searchable from Changes Explorer.
 <Tab title="API" id="create-change-events-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateEvent`](/tooling/api-info/data_definition/operations/CreateEvent)
+[`CreateEvent`](https://docs.chronosphere.io/tooling/api-info/data_definition/operations/CreateEvent)
 endpoint.
 
 Refer to the [change event limits](/administer/limits-licensing/limits/event-limits) for the
