--- a/observe/services/service-pages.mdx
+++ b/observe/services/service-pages.mdx
@@ -46,10 +46,10 @@ To edit basic information about a service, use one of the following methods.
 <Tab title="API" id="edit-service-info-api">
 
 To edit the attributes that appear on a service's detail page, use the
-[`CreateServiceAttribute`](/tooling/api-info/definition/operations/CreateServiceAttribute)
+[`CreateServiceAttribute`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateServiceAttribute)
 method in the Chronosphere API, which lets you specify custom attributes for a
 given service. After you've created these service attributes, you can use the
-[`UpdateServiceAttribute`](/tooling/api-info/definition/operations/UpdateServiceAttribute)
+[`UpdateServiceAttribute`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateServiceAttribute)
 method to change them.
 
 <ApiAuthReq />
