--- a/observe/slo.mdx
+++ b/observe/slo.mdx
@@ -332,11 +332,11 @@ To retrieve the JSON representation using the Chronosphere API:
 
 1. [Authenticate to the Chronosphere API](/tooling/api-info).
 1. Retrieve a list of SLOs by making a request to the
-   [`ListSLOs`](/tooling/api-info/definition/operations/ListSLOs) endpoint of the
+   [`ListSLOs`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListSLOs) endpoint of the
    Config API.
 1. Identify the SLO you want to edit by its `slug`.
 1. Retrieve the SLO by making a request to the
-   [`ReadSLO`](/tooling/api-info/definition/operations/ReadSLO) endpoint of the
+   [`ReadSLO`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadSLO) endpoint of the
    Config API with the SLO's `slug`.
 
 </Tab>
