--- a/observe/slo/manage.mdx
+++ b/observe/slo/manage.mdx
@@ -114,7 +114,7 @@ To create a new SLO:
 1. **<Icon icon="copy" /> Copy** the generated resource definition
    to your clipboard or **<Icon icon="download" /> Download** it.
 1. Include the modified `slo` object JSON in the request to the
-   [`CreateSLO`](/tooling/api-info/definition/operations/CreateSLO) endpoint
+   [`CreateSLO`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateSLO) endpoint
    of the Config API.
 
 </Tab>
@@ -209,7 +209,7 @@ To apply the change:
 
 1. [Authenticate to the Chronosphere API](/tooling/api-info).
 1. Include the modified `slo` object JSON in the request to the
-   [`UpdateSLO`](/tooling/api-info/definition/operations/UpdateSLO) endpoint of
+   [`UpdateSLO`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateSLO) endpoint of
    the Config API with the SLO's `slug`.
 
 To retrieve the SLO's slug, see the API tab of [View an SLO](/observe/slo#view-an-slo).
@@ -501,7 +501,7 @@ To delete an SLO from its page:
 To delete the SLO using the [Chronosphere API](/tooling/api-info):
 
 1. [Authenticate to the Chronosphere API](/tooling/api-info).
-1. Make a request to the [`DeleteSLO`](/tooling/api-info/definition/operations/DeleteSLO)
+1. Make a request to the [`DeleteSLO`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteSLO)
    endpoint of the Config API with the SLO's `slug`.
 
 </Tab>
