--- a/overview/concepts/dictionary.mdx
+++ b/overview/concepts/dictionary.mdx
@@ -229,7 +229,7 @@ The following metric applies to
 | `chrono_api_token_requests_total` | Counter | Monitors the number of requests made with a service account token. Can be inaccurate if more than 1000 service accounts are in use. |
 
 The `email` label for this metric corresponds to the `email` field queryable in the
-[service accounts API](/tooling/api-info/definition/operations/ListServiceAccounts).
+[service accounts API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListServiceAccounts).
 
 ## Alerts
 
