--- a/tooling/chronoctl.mdx
+++ b/tooling/chronoctl.mdx
@@ -300,7 +300,7 @@ This command uses a `session_ID` rather than an API token.
 - `login`: Authenticate the Chronoctl session as your Observability Platform user.
 - `logout`: Log the user out of their authenticated Chronoctl session. This command
    only revokes Chronoctl session IDs. Revoke service accounts using the
-   [`DeleteServiceAccount`](/tooling/api-info/definition/operations/DeleteServiceAccount)
+   [`DeleteServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteServiceAccount)
    API endpoint.
 - `list`: List all authenticated Observability Platform organizations the current
   user can access. Users might have access to multiple organizations such as a
