--- a/control/consumption/budgeting.mdx
+++ b/control/consumption/budgeting.mdx
@@ -140,11 +140,11 @@ Replace _`SLUG`_ with the slug of the budget you want to display.
 <Tab title="API" id="view-budgets-api">
 
 To return a list of budgets with the Chronosphere API, use the
-[`ListConsumptionBudgets`](/tooling/api-info/definition/operations/ListConsumptionBudgets)
+[`ListConsumptionBudgets`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListConsumptionBudgets)
 endpoint.
 
 To return a single budget definition, use the
-[`ReadConsumptionBudget`](/tooling/api-info/definition/operations/ReadConsumptionBudget) endpoint.
+[`ReadConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadConsumptionBudget) endpoint.
 
 <ApiAuthReq />
 
@@ -239,7 +239,7 @@ budget resource.
 <Tab title="API" id="create-budgets-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateConsumptionBudget`](/tooling/api-info/definition/operations/CreateConsumptionBudget)
+[`CreateConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
@@ -474,7 +474,7 @@ To edit a budget using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="edit-budgets-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateConsumptionBudget`](/tooling/api-info/definition/operations/UpdateConsumptionBudget)
+[`UpdateConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
@@ -509,7 +509,7 @@ consumption-budgets delete
 <Tab title="API" id="delete-budgets-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteConsumptionBudget`](/tooling/api-info/definition/operations/DeleteConsumptionBudget)
+[`DeleteConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
