--- a/investigate/alerts/notifications/notifiers/email.mdx
+++ b/investigate/alerts/notifications/notifiers/email.mdx
@@ -105,7 +105,7 @@ To create an email notifier:
 
 
 To complete this action with the Chronosphere API, use the `email` object in the
-[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
