--- a/investigate/alerts/notifications/notifiers/opsgenie.mdx
+++ b/investigate/alerts/notifications/notifiers/opsgenie.mdx
@@ -149,7 +149,7 @@ To create an Opsgenie notifier:
 <Tab title="API" id="opsgenie-API">
 
 To complete this action with the Chronosphere API, use the `ops_genie` object in the
-[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
