--- a/investigate/alerts/notifications/notifiers/webhook.mdx
+++ b/investigate/alerts/notifications/notifiers/webhook.mdx
@@ -109,7 +109,7 @@ To create a webhook notifier:
 <Tab title="API" id="webhook-API">
 
 To complete this action with the Chronosphere API, use the `webhook` object in the
-[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
